Enable SQL Dialect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect  # or MySQL5Dialect if applicable
 
 #testing DB
 #spring.jpa.hibernate.ddl-auto=update
