Enable SSD Storage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 #File Storage
-file.upload-dir =uploads/
+file.upload-dir =/image/uploads
